infra/k8s/pasal-orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pasal-order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pasal-order
  template:
    metadata:
      labels:
        app: pasal-order
    spec:
      containers:
        - name: pasal-order
          image: bharatrose1/pasal-order
---
apiVersion: v1
kind: Service 
metadata:
  name: pasal-order-srv
spec:
  selector:
    app: pasal-order
  ports:
    - name: pasal-order
      protocol: TCP
      port: 3000
      targetPort: 3000
