infra/k8s/pasal-products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pasal-products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pasal-products
  template:
    metadata:
      labels:
        app: pasal-products
    spec:
      containers:
        - name: pasal-products
          image: bharatrose1/pasal-products
---
apiVersion: v1
kind: Service 
metadata:
  name: pasal-products-srv
spec:
  selector:
    app: pasal-products
  ports:
    - name: pasal-products
      protocol: TCP
      port: 3000
      targetPort: 3000
#  'mongodb://pasal-products-mongo-srv:27017/products'
