infra/k8s/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq-srv
spec:
  clusterIP: None  # We need a headless service to allow the pods to discover each
  ports:
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672           
   - name: http    
     protocol: TCP 
     port: 15672
     targetPort: 15672
  selector:
    app: rabbitmq
---
