infra/k8s/ingress-srv.yaml
# apiVersion: extensions/v1beta1 If you use google cloud not miinikube
# added - before -f
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*" # for development only
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pasal.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pasal-auth-srv
                port:
                  number: 3000
          - path: /api/products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pasal-products-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pasal-orders-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pasal-static-server-srv
                port:
                  number: 80
